[package]
name = "graphene-cli"
version = "0.0.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "..."
repository = "https://github.com/lucis-fluxum/graphene-cli"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
directories-next = "1.0.0"
