[package]
name = "graphene-cli"
version = "0.0.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "..."
repository = "https://github.com/lucis-fluxum/graphene-cli"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
directories-next = "1.0.0"
dotenv = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "rt-threaded"] }
toml = "0.5.6"
